@@ -42,6 +42,7 @@ Fixed bug 1073: Hard coded violation messages CommentSize
 Fixed bug 1074: rule priority doesn't work on group definitions
 Fixed bug 1076: Report.treeIterator() does not return all violations
 Fixed bug 1077: Missing JavaDocs for Xref-Test Files
+Fixed bug 1078: Package statement introduces false positive UnnecessaryFullyQualifiedName violation
 Merged pull request #14: fix Nullpointer Exception when using -l jsp
 
 
